# JiwuChat

./: .env.development  .env.production  .env.test  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  Run.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  shims.d.ts  uno.config.ts
.cursor/commands/: release-app.md
.cursor/rules/: nuxt-development.mdc  package-management.mdc  project-structure.mdc  styling-uno.mdc  tauri-desktop.mdc  vue-development.mdc
.doc/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md
.github/releasemd/: v1.0.18.md  v1.0.19.md  v1.0.20.md  v1.0.21.md  v1.0.22.md  v1.0.23.md  v1.0.24.md  v1.0.25.md  v1.0.26.md  v1.0.27.md  v1.0.28.md  v1.0.29.md  v1.0.30.md  v1.0.31.md  v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.5.md  v1.3.6.md  v1.3.7.md  v1.3.8.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md  v1.4.5.md  v1.4.6.md  v1.4.7.md  v1.4.8.md  v1.4.9.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  (+23 more)
app/: app.vue
app/assets/: emoji.json
app/constants/: extend.ts  route.ts
app/directives/: copying.ts  ripple.ts
app/init/: index.ts  init.ts  setting.ts  ws.ts
app/middleware/: 01.dialog.global.ts  01.transition.global.ts  02.block.global.ts  02.transition.global.ts  03.block.global.ts  03.desktop.global.ts  04.desktop.global.ts  05.mobile.global.ts  router.global.ts
app/pages/: extend.vue  index.vue  login.vue
app/plugins/: directive.ts
app/types/: result.ts
app/utils/: routerGuard.ts
assets/styles/: index.scss
components/Chat/: ContactList.vue  MessageList.vue  MsgForm.vue  MsgFormV2.scss  MsgFormV2.vue  NewGroupDialog.vue  RoomGroupPopup.vue  UrlInfo.vue  VideoPreviewCard.vue
components/Input/: OssFileUpload.vue
components/dialog/: popup.vue
components/form/: LoginForm.vue
components/list/: VirtualScrollList.vue
components/menu/: BottomMenu.vue  ChatMenu.vue  ExtensionMenu.vue  HeaderMenuBar.vue  MenuDots.vue  MenuMore.vue  Popper.vue
components/other/: AudioWaveform.vue
components/page/: SettingTemplate.vue
components/setting/: DownLoad.vue  EnvConfigForm.vue  FontFamily.vue  SettingAudioDevice.vue  SettingFunction.vue  SettingShortcutEditDialog.vue  SettingShortcuts.vue  SettingStorage.vue  Theme.vue  Updator.vue  VersionDialog.vue
composables/hooks/: useMessageList.ts  useMicrophoneTest.ts  useSetting.ts  useShortcuts.ts  useThemeCustomization.ts
composables/store/: useChatStore.ts  useSettingStore.ts  useUserStore.ts
constants/: index.ts
docs/: SKILL.md  oauth-bind-backend.md  oauth-bind-frontend.md
init/: iframe.ts  init.ts  setting.ts  share.ts  system.ts
middleware/: router.global.ts
pages/: login.vue
scripts/: README.md  check-env.js  engineer.js  update-version.js
src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/LICENSE/: LICENSE.txt
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/desktops/: commands.rs  setup.rs  window.rs
src-tauri/src/desktops/deeplink/: handlers.rs
src-tauri/src/mobiles/: commands.rs  setup.rs  window.rs
src-tauri/src/mobiles/deeplink/: handlers.rs  mod.rs  types.rs
(+324 files in other folders)
