[package]
name = "jiwuchat"
version = "1.7.0"
description = "A Tauri App"
authors = ["Kiwi2333"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2" 
tauri-plugin-process = "2"
tauri-plugin-websocket = "2"
tauri-plugin-opener = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-updater = "2"
# tauri-plugin-window-state = "2"
    # permission// "window-state:default",
    # // "window-state:allow-restore-state",
    # // "window-state:allow-save-window-state",
    # // "window-state:allow-filename",

[target."cfg(target_os =\"macos\")".dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
